include details about master nodes

--- a/views/section_about.ejs
+++ b/views/section_about.ejs
@@ -12,12 +12,12 @@
                         <i class="fa fa-2x fa-commenting-o"></i>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Hello, World.</h5>
-                        <p class="card-text">Akroma is a network & team, it is not an Ethererum token, there is no ICO.</p>
+                        <h5 class="card-title">Masternodes</h5>
+                        <p class="card-text">Masternodes help protect by validating transactions. An alternative from mining, to generate Akroma.</p>
                     </div>
                     <div class="card-footer">
                         <small class="text-muted">
-                            <a href="https://github.com/akroma-project/akroma/wiki">Learn More</a>
+                            <a href="https://github.com/akroma-project/akroma/wiki/Masternodes">Learn More</a>
                         </small>
                     </div>
                 </div>
@@ -36,26 +36,38 @@
                     </div>
                 </div>
                 <div class="card">
-                    <div class="card-header">
-                        <i class="fa fa-2x fa-database"></i>
+                        <div class="card-header">
+                            <i class="fa fa-2x fa-cogs"></i>
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Scalability Enhancements</h5>
+                            <p class="card-text">State Channels, Atomic Swaps and Relay Chains.</p>
+                        </div>
+                        <div class="card-footer">
+                            <small class="text-muted">
+                                <a href="https://github.com/akroma-project/akroma/wiki/Scalability">Learn More</a>
+                            </small>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Experience</h5>
-                        <p class="card-text">The Akroma Fund is focused design, marketing and efforts that increase consumer adoption.</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">
-                            <a href="https://github.com/akroma-project/akroma/wiki/Experience">Learn More</a>
-                        </small>
-                    </div>
-                </div>
-
-
             </div>
         </div>
         <div class="row mb-5">
             <div class="card-deck">
-                <div class="card">
+                    <div class="card">
+                            <div class="card-header">
+                                <i class="fa fa-2x fa-database"></i>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Experience</h5>
+                                <p class="card-text">The Akroma Fund is focused design, marketing and efforts that increase consumer adoption.</p>
+                            </div>
+                            <div class="card-footer">
+                                <small class="text-muted">
+                                    <a href="https://github.com/akroma-project/akroma/wiki/Experience">Learn More</a>
+                                </small>
+                            </div>
+                        </div>
+                        <div class="card">
                     <div class="card-header">
                         <i class="fa fa-2x fa-cube"></i>
                     </div>
@@ -84,22 +96,6 @@
                         </small>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="card-header">
-                        <i class="fa fa-2x fa-cogs"></i>
-                    </div>
-                    <div class="card-body">
-                        <h5 class="card-title">Scalability Enhancements</h5>
-                        <p class="card-text">State Channels, Atomic Swaps and Relay Chains.</p>
-                    </div>
-                    <div class="card-footer">
-                        <small class="text-muted">
-                            <a href="https://github.com/akroma-project/akroma/wiki/Scalability">Learn More</a>
-                        </small>
-                    </div>
-                </div>
-
-
             </div>
         </div>
     </div>
