--- a/views/section_about.ejs
+++ b/views/section_about.ejs
@@ -13,7 +13,7 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Masternodes</h5>
-                        <p class="card-text">Masternodes help protect by validating transactions. An alternative from mining, to generate Akroma.</p>
+                        <p class="card-text">Masternodes help protect the Akroma network by validating transactions and are a passive way to generate Akroma.</p>
                     </div>
                     <div class="card-footer">
                         <small class="text-muted">
