--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -5,7 +5,7 @@
                 <h4>Information</h4>
                 <ul>
                     <li>
-                        <a href="https://github.com/akroma-project/akroma/wiki">About</a>
+                        <a href="https://github.com/akroma-project/akroma/wiki/Masternodes">Masternodes</a>
                     </li>
                     <li>
                         <a href="https://github.com/akroma-project/akroma/wiki/Decentralized-Oracles">Oracles</a>
