update landing copy

--- a/views/section_landing.ejs
+++ b/views/section_landing.ejs
@@ -7,7 +7,7 @@
       <div class="row mt-5">
         <div class="col-md-2"></div>
         <div class="col">
-          <h4>Blockchain + Smart Contracts + Oracles</h4>
+          <h4>Smart Contracts + Masternodes + Oracles</h4>
         </div>
         <div class="col-md-2"></div>
       </div>
