added how to create wallet guide to homepage

--- a/views/section_resources.ejs
+++ b/views/section_resources.ejs
@@ -73,6 +73,11 @@
                                 Solo Mining
                             </a>
                         </li>
+                        <li class="list-group-item">
+                            <a href="https://github.com/akroma-project/akroma-wallet-web/wiki/How-to-Create-a-Wallet">
+                                How to create a wallet
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
