footer link for discord

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -27,14 +27,19 @@
             <div class="col">
                 <h4>Follow Us</h4>
                 <ul>
-                        <li>
-                                <a href="http://github.com/akroma-project">
-                                    <i class="fa fa-github"></i> - GitHub</a>
-                            </li>
+                    <li>
+                        <a href="http://github.com/akroma-project">
+                            <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/github.svg" /> - GitHub</a>
+                    </li>
                     <li>
                         <a href="http://twitter.com/akroma_io">
-                            <i class="fa fa-twitter"></i> - Twitter</a>
+                            <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/twitter.svg" /> - Twitter</a>
                     </li>
+                    <li>
+                        <a href="https://discordapp.com/invite/KWC8wtT">
+                            <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/discord.svg" /> - Discord</a>
+                    </li>
+                    
                 </ul>
             </div>
             <div class="col">
