--- a/views/section_team.ejs
+++ b/views/section_team.ejs
@@ -49,18 +49,30 @@
                     </div>
                     <div class="card-footer">
                         <a href="https://twitter.com/missmeg703"><i class="fa fa-2x fa-twitter"></i></a>
-                        <a href="https://meganmayle.com/"><i class="fa fa-2x fa-globe"></i></a>                        
+                        <a href="https://meganmayle.com/"><i class="fa fa-2x fa-globe"></i></a>
                     </div>
                 </div>
                 <div class="card">
                     <img class="card-img-top" src="img/andrew.jpg" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title">Andrew Haine</h5>
+                        <h5 class="card-title">Andrew Hainen</h5>
                         <p class="card-text">Designer</p>
                     </div>
                     <div class="card-footer">
-                        <a href="https://www.behance.net/ahainen"><i class="fa fa-2x fa-twitter"></i></a>
-                        <a href="http://andrewhainen.com"><i class="fa fa-2x fa-behance"></i></a>
+                        <a href="https://www.behance.net/ahainen"><i class="fa fa-2x fa-behance"></i></a>
+                        <a href="http://andrewhainen.com"><i class="fa fa-2x fa-globe"></i></a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="img/stephen.png" alt="Stephen Cavaliere">
+                    <div class="card-body">
+                        <h5 class="card-title">Stephen Cavaliere</h5>
+                        <p class="card-text">Developer</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://twitter.com/stevecavaliere"><i class="fa fa-2x fa-twitter"></i></a>
+                        <a href="http://github.com/delasteve"><i class="fa fa-2x fa-github"></i></a>
+                        <a href="http://stephencavaliere.io"><i class="fa fa-2x fa-globe"></i></a>
                     </div>
                 </div>
             </div>
