--- a/views/section_resources.ejs
+++ b/views/section_resources.ejs
@@ -38,7 +38,13 @@
                         <li class="list-group-item">Solo Mining
                             <i class="fa fa-wrench   pull-right"></i>
                         </li>
-                        <li class="list-group-item">Pools Coming Soon
+                        <li class="list-group-item">
+                            <a href="http://aka.miningpeon.net">aka.miningpeon.net
+                                <i class="fa fa-signal  pull-right"></i>
+                            </a>
+                        </li>
+                        <li class="list-group-item">
+                            More Pools Coming Soon
                             <i class="fa fa-user-plus pull-right"></i>
                         </li>
                         <li class="list-group-item">
