added link to solo mining guide

--- a/views/section_resources.ejs
+++ b/views/section_resources.ejs
@@ -35,8 +35,11 @@
                         Mining
                     </div>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Solo Mining
-                            <i class="fa fa-wrench   pull-right"></i>
+                        <li class="list-group-item">
+                            <a href="https://github.com/akroma-project/akroma/wiki/Mining---Solo">
+                                Solo Mining
+                                <i class="fa fa-wrench   pull-right"></i>
+                            </a>
                         </li>
                         <li class="list-group-item">
                             <a href="http://aka.miningpeon.net">aka.miningpeon.net
