--- a/views/section_team.ejs
+++ b/views/section_team.ejs
@@ -52,7 +52,7 @@
                         <a href="https://meganmayle.com/"><i class="fa fa-2x fa-globe"></i></a>
                     </div>
                 </div>
-                <div class="card">
+                <!-- <div class="card">
                     <img class="card-img-top" src="img/andrew.jpg" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title">Andrew Hainen</h5>
@@ -62,7 +62,7 @@
                         <a href="https://www.behance.net/ahainen"><i class="fa fa-2x fa-behance"></i></a>
                         <a href="http://andrewhainen.com"><i class="fa fa-2x fa-globe"></i></a>
                     </div>
-                </div>
+                </div> -->
                 <div class="card">
                     <img class="card-img-top" src="img/stephen.png" alt="Stephen Cavaliere">
                     <div class="card-body">
