--- a/views/section_team.ejs
+++ b/views/section_team.ejs
@@ -8,7 +8,7 @@
         <div class="row">
             <div class="card-deck">
                 <div class="card">
-                    <img class="card-img-top" src="img/eric.png" alt="Card image cap">
+                    <img class="card-img-top" src="img/eric.png" alt="Eric Polerecky">
                     <div class="card-body">
                         <h5 class="card-title">Eric Polerecky</h5>
                         <p class="card-text">Technologist</p>
@@ -20,7 +20,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="img/ian.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/ian.jpg" alt="Ian DesJardins">
                     <div class="card-body">
                         <h5 class="card-title">Ian DesJardins</h5>
                         <p class="card-text">Developer</p>
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="img/gun.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/gun.jpg" alt="Gunveer Natt">
                     <div class="card-body">
                         <h5 class="card-title">Gunveer Natt</h5>
                         <p class="card-text">Mobile Developer</p>
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="img/meg.jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/meg.jpg" alt="Megan Mayle">
                     <div class="card-body">
                         <h5 class="card-title">Megan Mayle</h5>
                         <p class="card-text">Community Manager</p>
@@ -52,17 +52,17 @@
                         <a href="https://meganmayle.com/"><i class="fa fa-2x fa-globe"></i></a>
                     </div>
                 </div>
-                <!-- <div class="card">
-                    <img class="card-img-top" src="img/andrew.jpg" alt="Card image cap">
+                <div class="card">
+                    <img class="card-img-top" src="img/skoller.png" alt="Stephen Koller">
                     <div class="card-body">
-                        <h5 class="card-title">Andrew Hainen</h5>
-                        <p class="card-text">Designer</p>
+                        <h5 class="card-title">Stephen Koller</h5>
+                        <p class="card-text">Designer + Developer</p>
                     </div>
                     <div class="card-footer">
-                        <a href="https://www.behance.net/ahainen"><i class="fa fa-2x fa-behance"></i></a>
-                        <a href="http://andrewhainen.com"><i class="fa fa-2x fa-globe"></i></a>
+                        <a href="https://twitter.com/StephenKoller"><i class="fa fa-2x fa-twitter"></i></a>
+                        <a href="https://github.com/StephenKoller"><i class="fa fa-2x fa-github"></i></a>
                     </div>
-                </div> -->
+                </div>
                 <div class="card">
                     <img class="card-img-top" src="img/stephen.png" alt="Stephen Cavaliere">
                     <div class="card-body">
