added minerpoo.net to the mining resources (#6)

--- a/views/section_resources.ejs
+++ b/views/section_resources.ejs
@@ -47,8 +47,9 @@
                             </a>
                         </li>
                         <li class="list-group-item">
-                            More Pools Coming Soon
-                            <i class="fa fa-user-plus pull-right"></i>
+                            <a href="http://akroma.minerpool.net">akroma.minerpool.net
+                                <i class="fa fa-signal  pull-right"></i>
+                            </a>
                         </li>
                         <li class="list-group-item">
                             <a href="https://stats.akroma.io">Network Stats
