--- a/views/header.ejs
+++ b/views/header.ejs
@@ -50,6 +50,9 @@
                         <a class="nav-link js-scroll-trigger" href="#section_about">About</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#section_network">Network</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#section_resources">Resources</a>
                     </li>
                     <!-- <li class="nav-item dropdown">
