--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,8 @@
 
 <% include section_about %>
 
+<% include section_network %>
+
 <% include section_resources %>
 
 <% include section_community %>
