--- a/views/section_community.ejs
+++ b/views/section_community.ejs
@@ -1,4 +1,4 @@
-<section id="section_community" class="section-dark">
+<section id="section_community">
     <div class="container">
         <div class="row mb-5">
             <div class="col-sm-8 col-md-12 text-center">
