--- a/views/section_resources.ejs
+++ b/views/section_resources.ejs
@@ -1,4 +1,4 @@
-<section id="section_resources">
+<section id="section_resources" class="section-dark">
     <div class="container">
         <div class="row mb-5">
             <div class="col text-center">
