minor cleanup, added team discord ids, andrew :)

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -28,18 +28,26 @@
                 <h4>Follow Us</h4>
                 <ul>
                     <li>
-                        <a href="http://github.com/akroma-project">
-                            <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/github.svg" /> - GitHub</a>
-                    </li>
-                    <li>
                         <a href="http://twitter.com/akroma_io">
-                            <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/twitter.svg" /> - Twitter</a>
+                            <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/twitter.svg" />
+                        </a>
                     </li>
                     <li>
                         <a href="https://discordapp.com/invite/KWC8wtT">
-                            <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/discord.svg" /> - Discord</a>
+                            <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/discord.svg" />
+                        </a>
                     </li>
-                    
+                    <li>
+                        <a href="http://medium.com/akroma">
+                            <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/medium.svg" />
+                        </a>
+                    </li>
+                    <li>
+                        <a href="http://github.com/akroma-project">
+                            <img width="32" width="32" src="https://unpkg.com/simple-icons@latest/icons/github.svg" />
+                        </a>
+                    </li>
+
                 </ul>
             </div>
             <div class="col">
