--- a/views/section_team.ejs
+++ b/views/section_team.ejs
@@ -5,18 +5,25 @@
                 <h1>Team</h1>
             </div>
         </div>
-        <div class="row">
+        <div class="row  mb-3">
             <div class="card-deck">
                 <div class="card">
                     <img class="card-img-top" src="img/eric.png" alt="Eric Polerecky">
                     <div class="card-body">
                         <h5 class="card-title">Eric Polerecky</h5>
                         <p class="card-text">Technologist</p>
+                        <p class="card-text">discord: detroitpro</p>
                     </div>
                     <div class="card-footer">
-                        <a href="http://twitter.com/detroitpro"><i class="fa fa-2x fa-twitter"></i></a>
-                        <a href="http://github.com/detroitpro"><i class="fa fa-2x fa-github"></i></a>
-                        <a href="http://eric.polerecky.com/"><i class="fa fa-2x fa-globe"></i></a>
+                        <a href="http://twitter.com/detroitpro">
+                            <i class="fa fa-2x fa-twitter"></i>
+                        </a>
+                        <a href="http://github.com/detroitpro">
+                            <i class="fa fa-2x fa-github"></i>
+                        </a>
+                        <a href="http://eric.polerecky.com/">
+                            <i class="fa fa-2x fa-globe"></i>
+                        </a>
                     </div>
                 </div>
                 <div class="card">
@@ -24,10 +31,15 @@
                     <div class="card-body">
                         <h5 class="card-title">Ian DesJardins</h5>
                         <p class="card-text">Developer</p>
+                        <p class="card-text">discord: codenbrew</p>
                     </div>
                     <div class="card-footer">
-                        <a href="https://twitter.com/codenbrew"><i class="fa fa-2x fa-twitter"></i></a>
-                        <a href="https://github.com/iandesj"><i class="fa fa-2x fa-github"></i></a>
+                        <a href="https://twitter.com/codenbrew">
+                            <i class="fa fa-2x fa-twitter"></i>
+                        </a>
+                        <a href="https://github.com/iandesj">
+                            <i class="fa fa-2x fa-github"></i>
+                        </a>
                     </div>
                 </div>
                 <div class="card">
@@ -35,10 +47,15 @@
                     <div class="card-body">
                         <h5 class="card-title">Gunveer Natt</h5>
                         <p class="card-text">Mobile Developer</p>
+                        <p class="card-text">discord: gunnatt</p>
                     </div>
                     <div class="card-footer">
-                        <a href=""><i class="fa fa-2x fa-twitter"></i></a>
-                        <a href=""><i class="fa fa-2x fa-github"></i></a>
+                        <a href="">
+                            <i class="fa fa-2x fa-twitter"></i>
+                        </a>
+                        <a href="">
+                            <i class="fa fa-2x fa-github"></i>
+                        </a>
                     </div>
                 </div>
                 <div class="card">
@@ -46,21 +63,53 @@
                     <div class="card-body">
                         <h5 class="card-title">Megan Mayle</h5>
                         <p class="card-text">Community Manager</p>
+                        <p class="card-text">discord: missmeg703</p>
                     </div>
                     <div class="card-footer">
-                        <a href="https://twitter.com/missmeg703"><i class="fa fa-2x fa-twitter"></i></a>
-                        <a href="https://meganmayle.com/"><i class="fa fa-2x fa-globe"></i></a>
+                        <a href="https://twitter.com/missmeg703">
+                            <i class="fa fa-2x fa-twitter"></i>
+                        </a>
+                        <a href="https://meganmayle.com/">
+                            <i class="fa fa-2x fa-globe"></i>
+                        </a>
                     </div>
                 </div>
+
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="card-deck">
                 <div class="card">
                     <img class="card-img-top" src="img/skoller.png" alt="Stephen Koller">
                     <div class="card-body">
                         <h5 class="card-title">Stephen Koller</h5>
                         <p class="card-text">Designer + Developer</p>
+                        <p class="card-text">discord: skoller</p>
                     </div>
                     <div class="card-footer">
-                        <a href="https://twitter.com/StephenKoller"><i class="fa fa-2x fa-twitter"></i></a>
-                        <a href="https://github.com/StephenKoller"><i class="fa fa-2x fa-github"></i></a>
+                        <a href="https://twitter.com/StephenKoller">
+                            <i class="fa fa-2x fa-twitter"></i>
+                        </a>
+                        <a href="https://github.com/StephenKoller">
+                            <i class="fa fa-2x fa-github"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="img/andrew.jpg" alt="Stephen Koller">
+                    <div class="card-body">
+                        <h5 class="card-title">Andrew Hainen</h5>
+                        <p class="card-text">Designer</p>
+                        <p class="card-text">discord: WaffleHouse</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="https://twitter.com/ahainen">
+                            <i class="fa fa-2x fa-twitter"></i>
+                        </a>
+                        <a href="https://github.com/StephenKoller">
+                            <i class="fa fa-2x fa-dribbble"></i>
+                        </a>
                     </div>
                 </div>
                 <div class="card">
@@ -68,12 +117,22 @@
                     <div class="card-body">
                         <h5 class="card-title">Stephen Cavaliere</h5>
                         <p class="card-text">Developer</p>
+                        <p class="card-text">discord: delasteve</p>
                     </div>
                     <div class="card-footer">
-                        <a href="https://twitter.com/stevecavaliere"><i class="fa fa-2x fa-twitter"></i></a>
-                        <a href="http://github.com/delasteve"><i class="fa fa-2x fa-github"></i></a>
-                        <a href="http://stephencavaliere.io"><i class="fa fa-2x fa-globe"></i></a>
+                        <a href="https://twitter.com/stevecavaliere">
+                            <i class="fa fa-2x fa-twitter"></i>
+                        </a>
+                        <a href="http://github.com/delasteve">
+                            <i class="fa fa-2x fa-github"></i>
+                        </a>
+                        <a href="http://stephencavaliere.io">
+                            <i class="fa fa-2x fa-globe"></i>
+                        </a>
                     </div>
+                </div>
+                <div class="card">
+                    
                 </div>
             </div>
         </div>
