correct url for andrews portfolo

--- a/views/section_team.ejs
+++ b/views/section_team.ejs
@@ -107,7 +107,7 @@
                         <a href="https://twitter.com/ahainen">
                             <i class="fa fa-2x fa-twitter"></i>
                         </a>
-                        <a href="https://github.com/StephenKoller">
+                        <a href="https://dribbble.com/ahainen">
                             <i class="fa fa-2x fa-dribbble"></i>
                         </a>
                     </div>
