minor clean up and ga tags

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-46474321-5"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        gtag('config', 'UA-46474321-5');
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Akroma - Application Development Platform</title>
@@ -29,7 +38,7 @@
                 crossorigin="anonymous">
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
             <link rel="stylesheet" href="/css/style.css" />
-           
+
 </head>
 
 <body>
@@ -55,24 +64,12 @@
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#section_resources">Resources</a>
                     </li>
-                    <!-- <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Exchanges
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="#">Action</a>
-                          <a class="dropdown-item" href="#">Another action</a>
-                          <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                      </li> -->
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#section_community">Community</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#section_team">Team</a>
                     </li>
-                    <!-- <li class="nav-item"><a class="nav-link js-scroll-trigger" href="https://medium.com/trinityfx">Blog</a></li> -->
                 </ul>
             </div>
         </div>
