spelling is hard, good thing I can code

--- a/views/section_about.ejs
+++ b/views/section_about.ejs
@@ -72,7 +72,7 @@
                         <i class="fa fa-2x fa-cube"></i>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">Ethereum Compatability</h5>
+                        <h5 class="card-title">Ethereum Compatibility</h5>
                         <p class="card-text">Born from the Ethereum codebase and retunely integrating the latest Ethereum enhancements; Whats
                             good for Akroma is good for Ethereum.</p>
                     </div>
