added http://akroma.cryptopools.info/ to resources

--- a/views/section_resources.ejs
+++ b/views/section_resources.ejs
@@ -35,19 +35,19 @@
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
-                        <a href="https://github.com/akroma-project/akroma/wiki/Mining---Solo">
-                            Solo Mining
-                            <i class="fa fa-wrench   pull-right"></i>
-                        </a>
-                    </li>
-                    <li class="list-group-item">
                         <a href="http://aka.miningpeon.net">aka.miningpeon.net
-                            <i class="fa fa-signal  pull-right"></i>
+                            <i class="fa fa-signal pull-right"></i>
                         </a>
                     </li>
                     <li class="list-group-item">
                         <a href="http://akroma.minerpool.net">akroma.minerpool.net
-                            <i class="fa fa-signal  pull-right"></i>
+                            <i class="fa fa-signal pull-right"></i>
+                        </a>
+                    </li>
+                    <li class="list-group-item">
+                        <a href="http://akroma.cryptopools.info/">
+                            akroma.cryptopools.info
+                            <i class="fa fa-signal pull-right"></i>
                         </a>
                     </li>
                     <li class="list-group-item">
