added media contact to homepage

--- a/views/section_team.ejs
+++ b/views/section_team.ejs
@@ -132,7 +132,19 @@
                     </div>
                 </div>
                 <div class="card">
-                    
+                    <img class="card-img-top" src="img/fire_gray.jpg" alt="Akroma Team Contact">
+                    <div class="card-body">
+                        <h5 class="card-title">Team Contact</h5>
+                        <p class="card-text">Media Contact</p>
+                        <p class="card-text">discord: @Core Team</p>
+                    </div>
+                    <div class="card-footer">
+                        <a href="mailto:team@akroma.io">
+                            team@akroma.io
+                            </i>
+                        </a>
+                        <i class="fa fa-2x fa-address-card-o"></i>
+                    </div>
                 </div>
             </div>
         </div>
