feat: add landing page content

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
-@import 'fonts';
+@import url('https://fonts.googleapis.com/css?family=Work+Sans');
+@import 'variables';
 @import '~bootstrap/scss/bootstrap';
 @import '~font-awesome/scss/font-awesome';
+@import 'fonts';
