Add favicons and new logo, adjust navbar spacing

--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar fixed-top navbar-expand-sm">
   <div class="container">
-    <a class="navbar-brand" routerLink="">Akroma</a>
+    <a class="navbar-brand" routerLink="">
+      <img src="../../../assets/images/akroma-logo-on-black.svg" alt="Akroma">
+    </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false"
       aria-label="Toggle navigation">
