Add subhero content section, darken navbar bg

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,6 +11,21 @@
   </div>
 </section>
 
+<section class="section-wrapper subhero">
+  <div class="container">
+    <div class="row justify-content-around">
+      <div class="col-md-6 col-lg-6">
+        <h1 class="title">What is Akroma?</h1>
+        <p class="content">
+          Akroma is a cryptocurrency and application development platform
+          focused on creating a governance model that will reward long-term,
+          sustainable development and design.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section class="section-wrapper">
   <div class="container align-items-center">
     <div class="row py-5">
@@ -19,13 +34,22 @@
       </div>
       <div class="col-sm">
         <h1>Masternodes</h1>
-        <p>Masternodes help protect and scale the Akroma network by validating transactions and acting as a decentralization
-          incentive. Running a masternode is rewarded with Akroma.</p>
+        <p>
+          Masternodes help protect and scale the Akroma network by validating
+          transactions and acting as a decentralization
+          incentive. Running a masternode is rewarded with Akroma.
+        </p>
 
-        <p>The more nodes a cryptocurrency network has, the more prone it becomes to tampering and attacks.</p>
+        <p>
+          The more nodes a cryptocurrency network has, the more prone it becomes
+          to tampering and attacks.
+        </p>
 
-        <p>To protect against 51% attacks coming from centralized miner farms, the incentives for running a node and mining
-          have been unbundled.</p>
+        <p>
+          To protect against 51% attacks coming from centralized miner farms,
+          the incentives for running a node and mining
+          have been unbundled.
+        </p>
       </div>
     </div>
   </div>
@@ -53,11 +77,17 @@
       </div>
       <div class="col-sm">
         <h1>Sustainable Governance</h1>
-        <p>The Akroma governance model is focused on creating a sustainable application development platform while contributing
-          back to the greater community.</p>
+        <p>
+          The Akroma governance model is focused on creating a sustainable
+          application development platform while contributing back to the
+          greater community.
+        </p>
 
-        <p>Akroma governance will be handled off-chain, follow the Linux Foundation’s model and work to create a Technical Meritocracy
-          using Open Governance.</p>
+        <p>
+          Akroma governance will be handled off-chain, follow the Linux
+          Foundation’s model and work to create a Technical Meritocracy
+          using Open Governance.
+        </p>
 
         <p>Key Features:</p>
         <ul>
