feat: add network details section

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -63,7 +63,7 @@
         <p>Next generation smart contracts powered by real-world data feeds.</p>
       </div>
       <div class="col-sm section-image">
-        <img src="../../assets/images/oracles.svg" height="223" alt="Masternodes">
+        <img src="../../assets/images/oracles.svg" height="223" alt="oracles">
       </div>
     </div>
   </div>
@@ -73,7 +73,7 @@
   <div class="container">
     <div class="row py-5">
       <div class="col-sm section-image">
-        <img src="../../assets/images/governance.svg" width="378" height="377" alt="Masternodes">
+        <img src="../../assets/images/governance.svg" width="378" height="377" alt="governance">
       </div>
       <div class="col-sm">
         <h1>Sustainable Governance</h1>
@@ -99,6 +99,84 @@
           <li>Consumer over Enterprise</li>
           <li>100% of development funds distributed quarterly</li>
         </ul>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section-wrapper network-details">
+  <div class="container">
+    <div class="row py-5">
+      <div class="col-sm-7">
+        <div class="row">
+          <div class="col">
+            <h1>Network Details</h1>
+
+            <div class="row mt-5">
+              <div class="col-sm">
+                <div class="font-weight-bold">Protocol</div>
+
+                <table class="table table-sm">
+                  <tbody>
+                    <tr>
+                      <td>Algorithm</td>
+                      <td class="text-right">Ethash</td>
+                    </tr>
+                    <tr>
+                      <td>Total Supply</td>
+                      <td class="text-right">100 million</td>
+                    </tr>
+                    <tr>
+                      <td>Target Block Time</td>
+                      <td class="text-right">10 seconds</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+
+              <div class="col-sm">
+                <div class="font-weight-bold">Block Rewards</div>
+                <table class="table table-sm">
+                  <tbody>
+                    <tr>
+                      <td>Total</td>
+                      <td class="text-right text-nowrap">7 + 2 + 1</td>
+                    </tr>
+                    <tr>
+                      <td>Miners</td>
+                      <td class="text-right">9</td>
+                    </tr>
+                    <tr>
+                      <td>Masternodes</td>
+                      <td class="text-right">2</td>
+                    </tr>
+                    <tr>
+                      <td>Akroma Foundation</td>
+                      <td class="text-right">1</td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-xs-12 col-sm-12 col-md-6">
+            <div class="font-weight-bold">Masternodes</div>
+
+            <div class="mt-3 text">Details to be released on or before February 16 on
+              <span class="font-weight-bold">Medium</span>
+            </div>
+
+            <div class="mt-3">
+              <a href="https://medium.com/akroma" class="text font-white">Akroma.io on Medium</a>
+              <i class="fab fa-medium-m"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-5 section-image">
+        <img src="../../assets/images/network-details.svg" width="272" alt="network-details">
       </div>
     </div>
   </div>
