--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Work+Sans');
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,700');
 @import 'variables';
 @import '~bootstrap/scss/bootstrap';
-@import '~font-awesome/scss/font-awesome';
+// @import '~@fortawesome/fontawesome-free-webfonts/scss/fontawesome';
 @import 'fonts';
