--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,17 +6,17 @@
 .section-wrapper {
   background-size: cover;
 
-  .container {
+  > .container {
     display: flex;
     justify-content: center;
     min-height: 500px;
     flex-direction: column;
-  }
 
-  .section-image {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    .section-image {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
   }
 
   &.hero {
@@ -74,6 +74,28 @@
       left: 0;
       position: absolute;
       z-index: -1;
+    }
+  }
+
+  &.network-details {
+    background-image: linear-gradient(225deg, #FFA600 0%, #E25D00 100%);
+    color: #fff;
+    clip-path: polygon(0 0, 100% 10%, 100% 90%, 0 100%);
+
+    .table-sm {
+      font-size: 0.875rem;
+
+      td {
+        padding: 0.75rem 0;
+        border-top: 0;
+      }
+    }
+
+    .text {
+      font-size: 0.875rem;
+    }
+    .font-white {
+      color: #fff;
     }
   }
 }
