--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -5,11 +5,11 @@
     </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false"
-      aria-label="Toggle navigation">
+      aria-label="Toggle navigation" (click)="isCollapsed = !isCollapsed">
       <i class="fa fa-bars" aria-hidden="true"></i>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbar">
+    <div class="collapse navbar-collapse" [collapse]="isCollapsed" id="navbar">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="https://wallet.akroma.io">Wallet</a>
