--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -107,7 +107,7 @@
 <section class="section-wrapper network-details">
   <div class="container">
     <div class="row py-5">
-      <div class="col-sm-7">
+      <div class="col-md-7">
         <div class="row">
           <div class="col">
             <h1>Network Details</h1>
@@ -169,13 +169,13 @@
             </div>
 
             <div class="mt-3">
-              <a href="https://medium.com/akroma" class="text font-white">Akroma.io on Medium</a>
+              <a href="https://medium.com/akroma" class="text font-white underline">Akroma.io on Medium</a>
               <i class="fab fa-medium-m"></i>
             </div>
           </div>
         </div>
       </div>
-      <div class="col-sm-5 section-image">
+      <div class="col-md-5 py-5 section-image">
         <img src="../../assets/images/network-details.svg" width="272" alt="network-details">
       </div>
     </div>
